# attribute

./: .gitignore  README.md  pyproject.toml
attribute/: __init__.py  api.py  attributes.py
stash/: __init__.py  attributes.py  constants.py  stasher.py  types.py
tests/: test_attribute.py
